sms 12 jira 48 and code cleanup